--- a/modules/ROOT/pages/using.adoc
+++ b/modules/ROOT/pages/using.adoc
@@ -160,15 +160,27 @@ image::using/client-7.png[The Overflow Menu, width=250,pdfwidth=60%]
 
 The ownCloud Desktop App integrates with your file manager: Finder on Mac OS X, Explorer on Windows, and Nautilus on Linux. (Linux users must install the `owncloud-client-nautilus` plugin.) You can create share links, and share with internal ownCloud users the same way as in your ownCloud Web interface.
 
-image::using/mac-share.png[image, width=500,pdfwidth=60%]
+image::using/explorer-files-view.png[image, width=500,pdfwidth=60%]
 
 Right-click your systray icon, hover over the account you want to use, and left-click  menu:Open folder["folder name"] to quickly enter your local ownCloud folder. Right-click the file or folder you want to share to expose the share dialog, and click menu:Share with ownCloud[].
 
-image::using/share-1.png[sharing_1, width=300,pdfwidth=70%]
+[width=100%,cols="^.50%,^.50%",options="header"]
+|===
+| Systray Menu
+| Sharing Context Menu
+a| image::using/systray-menu.png[Systray Menu, width=300,pdfwidth=60%]
+a| image::using/owncloud-share.png[Sharing Context Menu, width=3000,pdfwidth=70%]
+|===
 
 The share dialog has all the same options as your ownCloud Web interface.
 
-image::using/share-2.png[sharing_2, width=300,pdfwidth=60%]
+[width=100%,cols="^.50%,^.50%",options="header"]
+|===
+| Sharing with users and groups
+| Public sharing
+a| image::using/share-user.png[Sharing with users and groups, width=350,pdfwidth=60%]
+a| image::using/share-public.png[Public sharing, width=350,pdfwidth=60%]
+|===
 
 Use *Share with ownCloud* to see who you have shared with, and to modify their permissions, or to delete the share.
 
