--- a/modules/ROOT/pages/using.adoc
+++ b/modules/ROOT/pages/using.adoc
@@ -197,13 +197,19 @@ Spaces are only available when connected to an Infinite Scale backend. In most c
 
 === Managing Resources to Synchronize
 
-When an account gets added the first time, you can select which remote resources you want to synchronize. These resources are represented by the Desktop app as local folders using the base path defined during account setup. Depending on the backend connected, resources can be folders and/or external mounts when using ownCloud Server or spaces when using Infinite Scale.
+When an account gets added the first time, you can select which remote resources you want to synchronize. This includes the syncronization type which defaults to VFS if available on your operating system (OS) or selective sync where you manually select the resoures to be synchronized otherwise. These resources are represented by the Desktop app as local folders using the base path defined during account setup. Depending on the backend connected, resources shown can be the full external mount or a folder inside an external mount when using ownCloud Server, or spaces when using Infinite Scale.
+
+If VFS is available for your OS but selective sync has been chosen, you can at any time switch to VFS and vice versa. Note to check the available disk space before switching from VFS to selective sync (Disable Virtual File support). 
 
 The base path defined on first sync is not the only path that can be used. Resources can have their individual base path. This is can be beneficial if you want selected resources to be located on different paths than the default.
 
 ==== Using an Account That Connects To ownCloud Server:
 
-* You will see a list of available remote resources you can manage as shown in the screenshot below. If a new resource gets added on the server, e.g. via the Web UI, it will be listed here.
+When VFS has been enabled on initial account setup, all new resources from the server will be added automatically but do not require additional space.
+
+In case selective sync has been chosen, different options are available to add resources.
+
+* You will see a list of available remote resources you can manage as shown in the screenshot below. If a new resource gets added on the server like via the Web UI, it will be listed here.
 
 ** To add a resource to be synced as folder to the *same base path*, set the check mark. To remove a resource from syncing, deselect it. To finalize the selection, click the btn:[Apply] button on the bottom right.
 
