--- a/modules/ROOT/pages/using.adoc
+++ b/modules/ROOT/pages/using.adoc
@@ -365,7 +365,9 @@ Enabling this feature will affect all new transfers (next upload chunk or next d
 
 === Using the Ignored Files Editor
 
-You might have some local files or directories that you do not want to backup and store on the server. To identify and exclude these files or directories, you can use the menu:Settings[Advanced > Ignored Files Editor]
+You might have some local files or directories that you do not want to backup and store on the server. To identify and exclude these files or directories, you can use the menu:Settings[Advanced > Ignored Files Editor].
+
+NOTE: Note that rules for ignored files are also applied to folders.
 
 image::using/ignored_files_editor.png[Ingnored Files Editor,width=350,pdfwidth=60%]
 
