[4.0] [PR 462] Small render fixes
Backport of PR #462

--- a/modules/ROOT/pages/advanced_usage/command_line_client.adoc
+++ b/modules/ROOT/pages/advanced_usage/command_line_client.adoc
@@ -31,7 +31,7 @@ Other command line switches supported by `owncloudcmd` include the following:
 | `-s, --silent`
 | Don't be so verbose.
 
-| `--httpproxy <http://server:port>`
+| `--httpproxy ++<http://server:port>++`
 | Specify a HTTP proxy to use.
 
 | `--trust`
@@ -86,7 +86,9 @@ Other command line switches supported by `owncloudcmd` include the following:
 
 [source,console]
 ----
-$ owncloudcmd /home/user/my_sync_folder https://carla:secret@server/owncloud/remote.php/dav/files/carla/
+owncloudcmd /home/user/my_sync_folder \
+            https://carla:secret@server/owncloud/remote.php/dav/files/carla/ \
+            /
 ----
 
 To synchronize the ownCloud directory `Music` to the local directory `media/music`, through a proxy listening on port `8080`, and on a gateway machine using IP address `192.168.178.1`, the command line would be:
