--- a/modules/ROOT/pages/advanced_usage/configuration_file.adoc
+++ b/modules/ROOT/pages/advanced_usage/configuration_file.adoc
@@ -31,29 +31,39 @@ WARNING: Use caution when making changes to the ownCloud Desktop App configurati
 
 == Section `[ownCloud]`
 
-[width="100%",cols="45%,25%,100%",options="header"]
+See the xref:faq.adoc#clarification-of-terms-used[Clarification of Terms Used] to get an indepth explanation
+about the terms. Note that except one wants to set different values, the defaults are always present and used.
+
+[width="100%",cols="45%,^25%,100%",options="header"]
 |===
-|  Variable | Default | Meaning 
+| Variable
+| Default
+| Meaning 
+
 | `remotePollInterval` 
-| `30000` 
-| Specifies the poll time for the remote repository in milliseconds.
+| `30000` +
+(30s)
+| The interval in milliseconds the Desktop app polls the server for changed data. If not set explicitly via the Desktop app, the Desktop app queries the server for a server sided default if present. 
 
 | `forceSyncInterval` 
-| `7200000` 
-| The duration of no activity after which a synchronization run shall be triggered automatically.
+| `7200000` +
+(2h)
+| The interval in milliseconds after which a synchronization is triggered automatically if no regular synchronisation activity took place. This enforcement takes care that there is a mandatory synchronisation independent of the servers polling response.
 
 | `fullLocalDiscoveryInterval` 
-| `3600000` 
-| The interval after which the next synchronization will perform a full local discovery.
+| `3600000` +
+(1h)
+| The interval in milliseconds after which the Desktop app will perform a full local discovery. Any changes found trigger a synchronisation.
 
 | `notificationRefreshInterval` 
-| `300000` 
-| Specifies the default interval of checking for new server notifications in milliseconds. 
+| `300000` +
+(30s)
+| The interval in milliseconds where the Desktop app checks for new server notifications. 
 |===
 
 == Section `[General]`
 
-[width="100%",cols="45%,25%,100%",options="header"]
+[width="100%",cols="45%,^25%,100%",options="header"]
 |===
 | Variable | Default | Meaning 
 
@@ -105,7 +115,7 @@ It does enable user interface options that can be used to opt in to experimental
 
 == Section `[Proxy]` 
 
-[width="100%",cols="45%,25%,100%",options="header"]
+[width="100%",cols="45%,^25%,100%",options="header"]
 |===
 | Variable 
 | Default 
