--- a/modules/ROOT/pages/advanced_usage/configuration_file.adoc
+++ b/modules/ROOT/pages/advanced_usage/configuration_file.adoc
@@ -32,7 +32,7 @@ WARNING: Use caution when making changes to the ownCloud Desktop App configurati
 == Section `[ownCloud]`
 
 See the xref:faq.adoc#clarification-of-terms-used[Clarification of Terms Used] to get an indepth explanation
-about the terms. Note that except one wants to set different values, the defaults are always present and used.
+about the terms. Note that the default values are always set and used unless you change them.
 
 [width="100%",cols="45%,^25%,100%",options="header"]
 |===
@@ -43,22 +43,22 @@ about the terms. Note that except one wants to set different values, the default
 | `remotePollInterval` 
 | `30000` +
 (30s)
-| The interval in milliseconds the Desktop app polls the server for changed data. If not set explicitly via the Desktop app, the Desktop app queries the server for a server sided default if present. 
+| The interval in milliseconds the Desktop app polls the server for changed data. If not set explicitly via the Desktop app, the Desktop app queries the server if a server-side default is present. 
 
 | `forceSyncInterval` 
 | `7200000` +
 (2h)
-| The interval in milliseconds after which a synchronization is triggered automatically if no regular synchronisation activity took place. This enforcement takes care that there is a mandatory synchronisation independent of the servers polling response.
+| The interval in milliseconds after which a synchronization is triggered automatically if no regular synchronization activity took place. This enforcement ensures that there is a mandatory synchronization independent of the server's polling response.
 
 | `fullLocalDiscoveryInterval` 
 | `3600000` +
 (1h)
-| The interval in milliseconds after which the Desktop app will perform a full local discovery. Any changes found trigger a synchronisation.
+| The interval in milliseconds after which the Desktop app will perform a full local discovery. Any changes found trigger a synchronization.
 
 | `notificationRefreshInterval` 
 | `300000` +
 (30s)
-| The interval in milliseconds where the Desktop app checks for new server notifications. 
+| The interval in milliseconds in which the Desktop app checks for new server notifications. 
 |===
 
 == Section `[General]`
