--- a/modules/ROOT/pages/advanced_usage/configuration_file.adoc
+++ b/modules/ROOT/pages/advanced_usage/configuration_file.adoc
@@ -31,8 +31,7 @@ WARNING: Use caution when making changes to the ownCloud Desktop App configurati
 
 == Section `[ownCloud]`
 
-See the xref:faq.adoc#clarification-of-terms-used[Clarification of Terms Used] to get an indepth explanation
-about the terms. Note that the default values are always set and used unless you change them.
+See the xref:faq.adoc#clarification-of-terms-used[Clarification of Terms Used] for an in-depth explanation. Note that the default values are always set and used unless you change them.
 
 [width="100%",cols="45%,^25%,100%",options="header"]
 |===
